<resources>
    <string name="app_name">GrowNature</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Grow Nature</string>
    <string name="nav_header_subtitle">Decoraciones para los lugares que tú elijas.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="texto_inicio">Inicio</string>
    <string name="tv_Info">Esta app te va a ayudar a decorar tu jardín, con diferentes tipos de plantas, arbustos y árboles de decoración.</string>
    <string name="et_EmailUsuario">Email</string>
    <string name="et_Password">Password</string>
    <string name="bIniSes">Iniciar Sesion</string>
    <string name="bRegis">Registrarse</string>
    <string name="texto_ArbolesDec">Arboles Decorativos</string>
    <string name="texto_ejemplos">Galeria de Ejemplos</string>
    <string name="texto_config">Configuración</string>
    <string name="texto_planSinFlorDec">Plantas sin flores decorativas</string>
    <string name="texto_search">Search</string>
    <string name="texto_prefere">Preferencias</string>
    <string name="action_contact">Contácteme</string>
    <string name="texto_arbustosDec">Arbustos Decorativos</string>
    <string name="texto_planConFlorDec">Plantas con flores decorativas</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_nombreIni">GROW NATURE</string>
    <string name="tv_descPlanta">Descripción</string>
    <string name="tv_plantacion">Plantación</string>
    <string name="tv_riego">Riego</string>
    <string name="tv_clima">Clima: </string>
    <string name="tv_crecimiento">Crecimiento</string>
    <string name="tv_precioAprox">Coste: </string>
    <string name="tv_lugaresComprar">Puede encontrarlo en: </string>
    <string name="tv_textEjemplo">EJEMPLO</string>
    <string name="nombre_helecho">HELECHO</string>
    <string name="descripcion_helecho">Los helechos son plantas milenarias y ornamentales con características únicas dentro del reino vegetal. Poseen un ciclo reproductivo muy particular, ya que a diferencia de casi todas las plantas, los helechos no se reproducen por semillas sino que lo hacen a través de la producción y liberación de miles de esporas. Esta hermosa planta proveniente de zonas cálidas y húmedas se ha convertido, gracias a su vistosidad y adaptabilidad, en la invitada permanente en hogares y oficinas. Se estima que existen más de diez mil especies de helechos en todo el planeta.</string>
    <string name="plantacion_helecho">Se puede plantar a lo largo de todo el año, no hay una época específica para plantar esta planta.</string>
    <string name="crecimiento_helecho">Muchos helechos son de crecimiento lento y tardan varios años en alcanzar su tamaño completo.</string>
    <string name="riego_helecho">Está planta en temperaturas cálidas, hay que regarla muy frecuentemente, pero en temperaturas más frías, no se debe regar mucho.</string>
    <string name="clima_helecho">Tanto de interior como de exterior necesitan tener el suelo húmedo y con sombra.</string>
    <string name="precio_helecho">200 esporas de helecho, unos 7 u 8€.</string>
    <string name="donde_comprar_helecho">Tienda Online: Etsy.</string>
    <string name="nombre_hiedra">Hiedra</string>
    <string name="descripcion_hiedra">Son plantas que no requieren obligatoriamente de luz natural para sobrevivir. Esto quiere decir que fácilmente puedes coger una maceta, plantar tu hiedra y tenerla en el interior de tu casa sin la preocupación de que esta muera.</string>
    <string name="plantacion_hiedra">El momento ideal para plantarla en el jardín será a comienzos de la primavera.</string>
    <string name="crecimiento_hiedra">La hiedra es una trepadora de hoja perenne que crece durante prácticamente todo el año.</string>
    <string name="riego_hiedra">El riego tiene que ser de manera moderada, siendo algo que tiene que hacerse justo cuando el sustrato esté completamente seco.</string>
    <string name="clima_hiedra">Temperatura media, aunque puede soportar temperaturas bajas.</string>
    <string name="precio_hiedra">Planta joven unos 10€.</string>
    <string name="donde_comprar_hiedra">Tienda Online: Alemany Viveros, Ebay.</string>
    <string name="nombre_bambu">Bambú</string>
    <string name="descripcion_bambu">Es conocida como “la planta de los mil usos”, de él se puede obtener, alimento, ropa, medicinas, material de construcción y sobre todo para decoraciones.</string>
    <string name="plantacion_bambu">Lo más recomendable es plantarlo a lo largo de la Primavera, pero si la zona es muy calurosa, puede plantarse en Otoño.</string>
    <string name="crecimiento_bambu">El bambú tarda aproximadamente 5 años para poder ser cultivado, pero llega a una altura de 12 a 15 m.</string>
    <string name="riego_bambu">En climas templados como primavera y otoño, lo más recomendable es regarlo 2 o 3 veces por semana, ya que necesita humedad, y en climas cálidos regarlo de 3 a 4 veces por semana, hay que tener cuidado de no ahogar las raices.</string>
    <string name="clima_bambu">Lo más recomendable es una temperatura intermedia, ni muy caluroso ni muy frio.</string>
    <string name="precio_bambu">50 Semillas de bambú unos 7 u 8€. Planta de bambú unos 30€.</string>
    <string name="donde_comprar_bambu">Tienda Online: Amazon, Ebay</string>
    <string name="nombre_agapanto">Agapanto</string>
    <string name="descripcion_agapanto">Se les llama la flor del amor, son plantas adaptables y de fácil cultivo. Su época de floración es a finales de primavera y verano</string>
    <string name="plantacion_agapanto">El mejor momento para plantarla es en primavera.</string>
    <string name="crecimiento_agapanto">Una vez plantado suele tardar de dos a tres años en florecer.</string>
    <string name="riego_agapanto">Es una planta que necesita bastante agua, en los climas cálidos regarla con días intercalados, y en clima frío cada dos o tres días.</string>
    <string name="clima_agapanto">Es una planta bastante resistente, pero lo mejor es que el clima no sea muy húmedo.</string>
    <string name="precio_agapanto">Aproximadamente 10€ una planta joven en tienda online.</string>
    <string name="donde_comprar_agapanto">Tienda Online; The Original Garden, Planflor-es</string>
    <string name="nombre_lamium_maculatum_mix">Lamium Maculatum Mix</string>
    <string name="descripcion_lamium_maculatum_mix">También conocido como falsa ortiga, es una planta herbácea anual que posee unas pequeñas hojas pelosas</string>
    <string name="plantacion_lamium_maculatum_mix"> Lo mejor es plantarla en primavera.</string>
    <string name="crecimiento_lamium_maculatum_mix">Su crecimiento es muy rápido</string>
    <string name="riego_lamium_maculatum_mix">Cuando más riego necesita es en verano ya que el clima es bastante cálido, y se le debe de regar unas 3 o 4 veces por semana</string>
    <string name="clima_lamium_maculatum_mix">Ni muy cálido, ni muy frío, es una planta resistente.</string>
    <string name="precio_lamium_maculatum_mix">Una planta puede costar unos 10€ por tienda online.</string>
    <string name="donde_comprar_lamium_maculatum_mix">Tienda Online: Fronda.</string>
    <string name="nombre_peperomia">Peperomia</string>
    <string name="descripcion_peperomia">Es uno de los dos grandes géneros botánicos de la familia Piperaceae, con más de 1160 especies aceptadas.</string>
    <string name="plantacion_peperomia">La mejor época para su plantación es primavera.</string>
    <string name="crecimiento_peperomia">Suele llegar a medir unos 30 cm de alto, y tardá aproximadamente 1 año.</string>
    <string name="riego_peperomia">No necesitan mucho riego, aproximadamente 1 vez por semana.</string>
    <string name="clima_peperomia">Lo mejor es un clima cálido pero no mucho, por que esta planta es muy sensible al frío.</string>
    <string name="precio_peperomia"> Una planta joven puede costar unos 8 o 10€ por tienda online.</string>
    <string name="donde_comprar_peperomia">Tienda online: Mini planta, Natural love</string>
    <string name="nombre_alocasia">Alocasia</string>
    <string name="descripcion_alocasia">También conocida como “Oreja de Elefante”. Es una planta de origen tropical. Y son plantas siempre verdes, con su debido riego no debería de secarse.</string>
    <string name="plantacion_alocasia">Lo más recomendable para esta planta es trasplantar antes de la primavera.</string>
    <string name="crecimiento_alocasia">Si es plantada en suelo y en su ambiente puede alcanzar los 5 m de altura.</string>
    <string name="riego_alocasia">El riego debe ser constante ya que es una planta que necesita humedad.</string>
    <string name="clima_alocasia">Lo ideal para esta planta es humedad.</string>
    <string name="precio_alocasia">En tienda online puede costar unos 10 € la planta joven.</string>
    <string name="donde_comprar_alocasia">Tienda online: Mini Planta.</string>
    <string name="nombre_coleo">Cóleo</string>
    <string name="descripcion_coleo">Los Cóleos son plantas perennes originarias de África y Asia tropical.</string>
    <string name="plantacion_coleo">Se planta durante la primavera, el verano y el otoño, estas plantas se suelen tener en el exterior.</string>
    <string name="crecimiento_coleo">Suele llegar a crecer hasta 50 cm, pero en su entorno puede llegar hasta el metro.</string>
    <string name="riego_coleo">No son muy exigentes con el agua.</string>
    <string name="clima_coleo">Temperatura media, ni muy cálido, ni muy frío.</string>
    <string name="precio_coleo">En tienda online puede costar de 5 a 10€ la planta joven.</string>
    <string name="donde_comprar_coleo">Tienda online: GermiGarden, PradoPlant, VerdeCora.</string>
    <string name="nombre_fitonia">Fitonia</string>
    <string name="descripcion_fitonia">Es un género con dos especies perteneciente a la familia Acanthaceae. Es nativo de las selvas tropicales de Sudamérica.</string>
    <string name="plantacion_fitonia">Se trasplanta en primavera cuando las raíces hayan ocupado todo el espacio a su disposición.</string>
    <string name="crecimiento_fitonia">Es una planta que no crece mucho, y llega a medir unos 15 a 20 cm.</string>
    <string name="riego_fitonia">En una época cálida regarla 3 veces por semana, y en época fría 1 vez por semana será suficiente.</string>
    <string name="clima_fitonia">Necesita una temperatura más bien cálida, pero no mucho, además de que es una planta de interior.</string>
    <string name="precio_fitonia">En tienda online puede costar de 5 a 10€ la planta joven.</string>
    <string name="donde_comprar_fitonia">Tienda online: GermiGarden, Fronda.</string>
    <string name="nombre_kentia">Kentia</string>
    <string name="descripcion_kentia">Planta que destaca por su facilidad de adaptarse tanto a interiores como a exteriores, lo que motiva que se pueda usar en ambos espacios sin ningún problema.</string>
    <string name="plantacion_kentia">La mejor época para plantar la Kentia es en primavera.</string>
    <string name="crecimiento_kentia">Puede llegar a medir 1,5 metros pero tardando unos 10 años para conseguirlo.</string>
    <string name="riego_kentia">Lo ideal es regar un par de veces a la semana en verano y una o 2 veces al mes durante el invierno.</string>
</resources>