<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/texto_search"
        app:actionViewClass="android.widget.SearchView" />
    <group
        android:id="@+id/grupo1"
        android:checkableBehavior="single"
        android:enabled="true">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/incio"
            android:title="@string/texto_inicio" />
    </group>
    <group
        android:id="@+id/grupo2"
        android:enabled="true"
        android:visible="true">
        <item
            android:id="@+id/nav_plansinflordec"
            android:icon="@drawable/plantasinflores"
            android:title="@string/texto_planSinFlorDec" />
        <item
            android:id="@+id/nav_planconflordec"
            android:icon="@drawable/plantaconflores"
            android:title="@string/texto_planConFlorDec" />
        <item
            android:id="@+id/nav_arbustodec"
            android:icon="@drawable/arbusto"
            android:title="@string/texto_arbustosDec" />
        <item
            android:id="@+id/nav_arbolesdec"
            android:icon="@drawable/arbol"
            android:title="@string/texto_ArbolesDec" />
    </group>
    <group
        android:id="@+id/grupo3"
        android:enabled="true"
        android:visible="true">
        <item
            android:id="@+id/nav_ejemplos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/texto_ejemplos" />
    </group>
    <group
        android:id="@+id/grupo4"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_config"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/texto_config" />
    </group>
</menu>